# SJ_C-_study

./: .gitignore  Text.txt
Autosar 및 CAN 통신/: CAN 통신 관련 정리.txt  autosar 관련 정리.txt
ai/api/: .env.example  requirements.txt  youtube_search.py
study/algorithm/: list.txt  (+3 more)
study/gRPC/: CMakeLists.txt  build.bat
study/gRPC/bulid/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  client.vcxproj  client.vcxproj.filters  cmake_install.cmake  grpc_hello.sln  server.vcxproj  server.vcxproj.filters
study/gRPC/bulid/client.dir/Release/: client.exe.recipe
study/gRPC/bulid/client.dir/Release/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
study/gRPC/bulid/server.dir/Release/: server.exe.recipe
study/gRPC/bulid/server.dir/Release/server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
study/gRPC/bulid/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
study/gRPC/bulid/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
study/gRPC/bulid/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
study/gRPC/bulid/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
study/gRPC/client/: client.cpp
study/gRPC/proto/: hello.proto
study/gRPC/server/: server.cpp
(+61 files in other folders)
